<resources>
    <string name="app_name">BitChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="name_hint">Please enter your name</string>
    <string name="password_hint">Please enter your password</string>
    <string name="number_hint">Please enter your number</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="send">Send</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
