<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.kevin.bitchat.SigninActivity">
    <LinearLayout
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/user_name"
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_number"
            android:hint="@string/number_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/login_button"
                android:text="@string/login"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
